# burrow

./: .gitignore  .npmrc  AGENTS.md  CLAUDE.md  PRODUCT.md  README.md  agentic-ide.pen  index.html  justfile  mobile.html  package.json  pnpm-lock.yaml  vite.config.ts
.burrow/: config.toml  manager.md
docs/: IDEAS.md  Xstate.html  burrow.html  changelog.html  cmux-features.html  context.html  daemon.html  mission-control.html  mobile-remote.md  recap-status-and-delegation.html  tank-analysis.html  todo.html
docs/plans/: acp-chat-transport.md  burrow-features-2026-06-02.md  claude-proxy-ui-2026-06-09.md  mission-control.todo.md  supacode-parity-2026-06-18.html  vscode-extension-recon.md  vscode-usage-reverse-eng.md
docs/reports/: 2026-06-03-terminal-overflow.md
docs/superset-concept/: index.html
src/: App.vue  main.ts  themes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: daemon_client.rs  daemon_main.rs  lib.rs  main.rs  web_main.rs
src/components/: ActivityBar.vue  AgentTimeline.vue  AgentToolbar.vue  AutoRefreshButton.vue  BrowserPane.vue  ChatAgentConfig.vue  ClaudeChat.vue  CodeEditor.vue  Dashboard.vue  DiagramModal.vue  DiffTab.vue  FileTreeNode.vue  FloatBubble.vue  FloatChat.vue  GitPanel.vue  ManagerBar.vue  MissionControl.vue  PetOverlay.vue  RightPanel.vue  Settings.vue  SettingsModal.vue  Sidebar.vue  Spotlight.vue  Terminal.vue  TerminalSplitView.vue  TitleBar.vue  ToastStack.vue  UpdateBanner.vue  WorkspaceConfig.vue  WorkspaceScreen.vue  XTerm.vue
(+50 files in other folders)
