[package]
name = "agentic-ide"
version = "2.14.0"
description = "Burrow - AI-powered terminal IDE"
authors = []
license = ""
repository = ""
default-run = "agentic-ide"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "agentic_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "agentic-ide"
path = "src/main.rs"

[[bin]]
name = "burrow-daemon"
path = "src/daemon_main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-decorum = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
portable-pty = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
log = "0.4"
tiny_http = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-window-state = "2"
window-vibrancy = "0.5"
sysinfo = "0.32"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
